[gd_scene load_steps=22 format=3 uid="uid://djdg8wet86nat"]

[ext_resource type="Script" path="res://test_junk/archived for now/battle_entity_player.gd" id="1_ewoii"]
[ext_resource type="PackedScene" uid="uid://b1s71hosugqju" path="res://UI/inventory_gui.tscn" id="2_se0au"]
[ext_resource type="PackedScene" uid="uid://c5r06amfsateg" path="res://UI/battle_gui.tscn" id="3_d3bd7"]
[ext_resource type="PackedScene" uid="uid://djw4yjejthj5q" path="res://Scenes/state_chart_battle.tscn" id="4_8t0fa"]
[ext_resource type="PackedScene" uid="uid://b7x2uimrghas2" path="res://test_junk/debug_3d_text.tscn" id="5_siyod"]
[ext_resource type="Script" path="res://Logic/scripts/animations.gd" id="6_0a5wi"]
[ext_resource type="PackedScene" uid="uid://b3707fwdhap4h" path="res://UI/status_hud.tscn" id="7_sdbku"]
[ext_resource type="SpriteFrames" uid="uid://djkna70chus8q" path="res://Resources/SpriteFrames/player.tres" id="8_hldyj"]
[ext_resource type="AnimationLibrary" uid="uid://bia4tx8dc3gjm" path="res://Resources/AnimationLibrary/default_player.tres" id="9_7dcry"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://kayc3qljdn4u" path="res://Art/animations/character_animation_tree_player.tres" id="10_r36il"]
[ext_resource type="Script" path="res://Logic/scripts/character_animation_tree.gd" id="11_pqclx"]
[ext_resource type="Script" path="res://Logic/components/components.gd" id="12_wajde"]
[ext_resource type="PackedScene" uid="uid://ci3yj38s28xgq" path="res://Logic/components/component_ability.tscn" id="13_llrsp"]
[ext_resource type="Script" path="res://Logic/components/component_inventory.gd" id="14_a3yhn"]
[ext_resource type="Script" path="res://Logic/components/component_party.gd" id="15_tlmu7"]
[ext_resource type="Script" path="res://Logic/components/component_state_controller_battle.gd" id="16_624ux"]
[ext_resource type="Script" path="res://Logic/components/component_health.gd" id="17_1gops"]
[ext_resource type="Script" path="res://Logic/components/component_vis.gd" id="18_oqa2w"]
[ext_resource type="Script" path="res://Logic/components/component_animation_controller_battle.gd" id="19_r6lab"]
[ext_resource type="Script" path="res://Logic/components/component_physics.gd" id="20_5rt8a"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h7j1u"]
radius = 0.258558
height = 1.11006

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("my_battle_gui", "my_component_party", "my_component_inventory", "state_chart", "animations", "collider", "my_component_health", "my_component_vis", "my_component_ability", "my_component_state_controller_battle") groups=["load_data_scene", "save_data_scene"]]
physics_interpolation_mode = 1
script = ExtResource("1_ewoii")
my_battle_gui = NodePath("Battle_GUI")
my_component_party = NodePath("Components/component_party")
my_component_inventory = NodePath("Components/component_inventory")
state_chart = NodePath("StateChart")
animations = NodePath("Animations")
collider = NodePath("CollisionShape3D")
my_component_health = NodePath("Components/component_health")
my_component_vis = NodePath("Components/component_vis")
my_component_ability = NodePath("Components/component_ability")
my_component_state_controller_battle = NodePath("Components/component_state_controller_battle")
alignment = "FRIENDS"
classification = "PLAYER"

[node name="Inventory_GUI" parent="." node_paths=PackedStringArray("my_component_party", "my_component_inventory") instance=ExtResource("2_se0au")]
my_component_party = NodePath("../Components/component_party")
my_component_inventory = NodePath("../Components/component_inventory")

[node name="Battle_GUI" parent="." instance=ExtResource("3_d3bd7")]
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StateChart" parent="." instance=ExtResource("4_8t0fa")]
unique_name_in_owner = true

[node name="DEBUG_3D_TEXT" parent="." node_paths=PackedStringArray("my_component_state_controller_battle", "my_component_health", "my_component_vis", "my_component_ability") instance=ExtResource("5_siyod")]
my_component_state_controller_battle = NodePath("../Components/component_state_controller_battle")
my_component_health = NodePath("../Components/component_health")
my_component_vis = NodePath("../Components/component_vis")
my_component_ability = NodePath("../Components/component_ability")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.028, 0.06, 0.008)
shape = SubResource("CapsuleShape3D_h7j1u")

[node name="Animations" type="Node3D" parent="."]
script = ExtResource("6_0a5wi")

[node name="character_sprite_position" type="Node3D" parent="Animations"]

[node name="selector_anchor" type="Marker3D" parent="Animations/character_sprite_position"]

[node name="status_hud" parent="Animations/character_sprite_position" node_paths=PackedStringArray("my_component_health", "my_component_vis", "collider") instance=ExtResource("7_sdbku")]
my_component_health = NodePath("../../../Components/component_health")
my_component_vis = NodePath("../../../Components/component_vis")
collider = NodePath("../../../CollisionShape3D")

[node name="character_animation_sprite" type="AnimatedSprite3D" parent="Animations"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
shaded = true
alpha_cut = 2
texture_filter = 0
render_priority = -1
sprite_frames = ExtResource("8_hldyj")
animation = &"default_idle_down"
frame = 1

[node name="RemoteTransform3DPosition" type="RemoteTransform3D" parent="Animations/character_animation_sprite"]
remote_path = NodePath("../../character_sprite_position")
update_rotation = false
update_scale = false

[node name="character_animation_player" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../character_animation_sprite")
libraries = {
"": ExtResource("9_7dcry")
}

[node name="character_animation_tree" type="AnimationTree" parent="Animations"]
active = false
root_node = NodePath("../character_animation_sprite")
tree_root = ExtResource("10_r36il")
anim_player = NodePath("../character_animation_player")
parameters/Death/TimeScale/scale = 1.0
parameters/Hurt/TimeScale/scale = 1.0
parameters/Idle/BlendSpace2D/blend_position = Vector2(0.301537, 0.859873)
parameters/Idle/TimeScale/scale = 1.0
parameters/Walk/BlendSpace2D/blend_position = Vector2(-0.0011825, 0.00709224)
parameters/Walk/TimeScale/scale = 1.0
script = ExtResource("11_pqclx")

[node name="Components" type="Node" parent="."]
script = ExtResource("12_wajde")

[node name="component_ability" parent="Components" instance=ExtResource("13_llrsp")]

[node name="component_inventory" type="Node" parent="Components"]
script = ExtResource("14_a3yhn")

[node name="component_party" type="Node" parent="Components"]
script = ExtResource("15_tlmu7")

[node name="component_state_controller_battle" type="Node" parent="Components" node_paths=PackedStringArray("my_component_ability")]
script = ExtResource("16_624ux")
my_component_ability = NodePath("../component_ability")

[node name="component_health" type="Node" parent="Components"]
script = ExtResource("17_1gops")
max_health = 20

[node name="component_vis" type="Node" parent="Components"]
script = ExtResource("18_oqa2w")
max_vis = 12

[node name="component_animation_controller_battle" type="Node" parent="Components"]
script = ExtResource("19_r6lab")

[node name="component_physics" type="Node" parent="Components"]
script = ExtResource("20_5rt8a")

[connection signal="animation_finished" from="Animations/character_animation_tree" to="Animations/character_animation_tree" method="_on_animation_finished"]
[connection signal="animation_started" from="Animations/character_animation_tree" to="Animations/character_animation_tree" method="_on_animation_started"]
